--- a/NetCafeWeb/Views/Shared/MasterPage.cshtml
+++ b/NetCafeWeb/Views/Shared/MasterPage.cshtml
@@ -188,7 +188,7 @@
                     </li>
                     -->
                     
-                    @if (isAdmin)
+                    @if (isAdmin || isSupervisor)
                     {
                         <li class="sub-menu">
                             <a href="/user" class="">
