--- a/NetCafeWeb/Views/PC/Index.cshtml
+++ b/NetCafeWeb/Views/PC/Index.cshtml
@@ -32,6 +32,7 @@
                 <h2>PC Management - Administrator</h2>
                 <section style="width: 500px" >
                     <select class="form-control" id="selectedNet">
+                        <option value="0">All</option>
                         @{
                             foreach (NetCafe netcafe in netList)
                             {
@@ -63,7 +64,7 @@
             var id = $("#selectedNet").val();
             location.href = "/PC/Index/" + id;
         }
-    </script>
+         </script>
 
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" style="margin-top: 10px">+ Add New PC</button>
     <div>
@@ -209,12 +210,11 @@
                     <div class="form-group">
                         <label for="sel1">NetCafe</label>
                         <select class="form-control" id="netCafeAddress">
-                            <option value="-1">Select</option>
                             @{
 
                                 foreach (NetCafe netcafe in netList)
                                 {
-                                    <option value="@netcafe.NetCafeID">@netcafe.NetCafeName - @netcafe.NetCafeAddress</option>
+                                    <option disabled="disabled" value="@netcafe.NetCafeID">@netcafe.NetCafeName - @netcafe.NetCafeAddress</option>
                                 }
                             }
                         </select>
@@ -227,7 +227,7 @@
                         </select>
                     </div>
                 </div>
-                <p id="error" style="color: red"></p>
+                <p id="error" class="alert-danger"></p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -287,10 +287,10 @@
             },
             success: function (data) {
                 if (data === 'True') {
-                    alert("Add successfully")
+                    alert("Add successfully!")
                 }
                 else {
-                    alert("PC Name is exist!")
+                    $("#error").html("Invalid!");
                 }
                 location.reload();
             },
@@ -309,12 +309,11 @@
                 alert("Problem")
             },
             success: function (data) {
-                if (data === 'True'){
-                    alert("Delete successfully")
+                if (data=== 'true'){
+                    alert("Delete successfully!")
                     location.reload();
                 } else {
-                    alert("Cannot delete this PC because it is in used!")
-                location.reload();
+                    alert("Cannot delete this PC because it is in used!");
             }
 
             },
